tableview stuff basic model yet to be made

--- a/TheWeatherApp/TheWeatherApp/Base.lproj/Main.storyboard
+++ b/TheWeatherApp/TheWeatherApp/Base.lproj/Main.storyboard
@@ -82,29 +82,29 @@
                                     <constraint firstAttribute="height" constant="300" id="hI0-bU-eOs"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ofm-HJ-PIF">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ofm-HJ-PIF">
                                 <rect key="frame" x="0.0" y="300" width="414" height="436"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="aas-bD-oXy">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="WeatherCell" rowHeight="80" id="aas-bD-oXy">
                                         <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aas-bD-oXy" id="a1b-gv-3sp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.666666666666671"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yWq-fZ-YNT">
-                                                    <rect key="frame" x="28" y="18.333333333333329" width="50" height="50"/>
+                                                    <rect key="frame" x="28" y="18.666666666666668" width="50" height="49.999999999999986"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="SVK-sd-55u"/>
                                                         <constraint firstAttribute="width" constant="50" id="h7K-go-r5M"/>
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Noz-Vt-2DC">
-                                                    <rect key="frame" x="98" y="18.333333333333329" width="288" height="50"/>
+                                                    <rect key="frame" x="98" y="18.666666666666668" width="288" height="49.999999999999986"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="d3e-6R-ecY">
-                                                            <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="50"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="49.999999999999993"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Wednesday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVw-dc-7zY">
                                                                     <rect key="frame" x="0.0" y="0.0" width="98.666666666666657" height="30"/>
@@ -113,7 +113,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Cloudy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rcu-Mb-RDQ">
-                                                                    <rect key="frame" x="0.0" y="30" width="54" height="20"/>
+                                                                    <rect key="frame" x="0.0" y="30.000000000000004" width="54" height="19.999999999999996"/>
                                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -121,7 +121,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="2nI-g8-Hls">
-                                                            <rect key="frame" x="260.66666666666674" y="0.0" width="27.333333333333314" height="50"/>
+                                                            <rect key="frame" x="260.66666666666674" y="0.0" width="27.333333333333314" height="49.999999999999993"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="35°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a4r-lH-pcc">
                                                                     <rect key="frame" x="0.0" y="0.0" width="27.333333333333314" height="30"/>
@@ -130,7 +130,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="27°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8w-6T-aRB">
-                                                                    <rect key="frame" x="0.0" y="30" width="27.333333333333314" height="20"/>
+                                                                    <rect key="frame" x="0.0" y="30.000000000000004" width="27.333333333333314" height="19.999999999999996"/>
                                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -152,6 +152,7 @@
                                                 <constraint firstItem="yWq-fZ-YNT" firstAttribute="leading" secondItem="a1b-gv-3sp" secondAttribute="leadingMargin" constant="20" id="qiA-PB-Zgw"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
